@@ -1,6 +1,7 @@
 Version 2.2.0.0
 =================
 bear:
+Fixed a bug where the Multifilereader was holding the file open when in stopped, re- FileDuration's FileReader class.
 Fixed another issue with the Multifilereader mode's correct seeking time when changing between streams.
 Fixed a issue with the Source Load() function where it was changing the filename paramater's pointer value.
 Fixed a bug with the Multifilereader mode where it was not seeking correctly when the TSFileSink buffer size was reached.
